--- a/user-reporting-app/src/app/transaction-view/transaction-view.component.scss
+++ b/user-reporting-app/src/app/transaction-view/transaction-view.component.scss
@@ -27,3 +27,18 @@ mat-toolbar-row.header-toolbar-row {
   min-height: 70dvh;
   height: 70dvh;
 }
+
+.header-toolbar-row {
+  .spinning {
+    animation: spin 1s linear infinite;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
