--- a/user-reporting-app/src/app/reporting-ui/manual-upload-stepper/manual-upload-stepper.component.scss
+++ b/user-reporting-app/src/app/reporting-ui/manual-upload-stepper/manual-upload-stepper.component.scss
@@ -59,3 +59,7 @@ mat-dialog-content {
 ::ng-deep .mat-stepper-horizontal {
   margin-top: 16px;
 }
+
+::ng-deep mat-step.review-data .mat-horizontal-content-container {
+  padding: 0 0 0.5rem 0;
+}
