--- a/user-reporting-app/src/app/reporting-ui/edit-form/edit-form.component.scss
+++ b/user-reporting-app/src/app/reporting-ui/edit-form/edit-form.component.scss
@@ -137,12 +137,11 @@ mat-card.transaction-details-card {
 }
 
 mat-toolbar {
-  @include mat.chips-density(5);
+  @include mat.chips-density(3);
 }
 
 mat-chip.selected-chip {
-  --mat-chip-with-icon-icon-size: 1.5rem;
-  --mat-chip-label-text-size: 1.1rem;
+  --mat-chip-label-text-size: 1rem;
 }
 
 ::ng-deep .selected-chip .mdc-evolution-chip__text-label {
@@ -157,4 +156,9 @@ mat-chip.selected-chip {
 
 ::ng-deep .audit-form-btn .mat-mdc-form-field-infix {
   width: 45px;
+}
+
+.edit-form,
+.toolbar {
+  @include mat.button-density(0);
 }
