--- a/user-reporting-app/src/app/reporting-ui/reporting-ui-table/reporting-ui-table.component.scss
+++ b/user-reporting-app/src/app/reporting-ui/reporting-ui-table/reporting-ui-table.component.scss
@@ -3,12 +3,7 @@
   flex-wrap: nowrap;
 }
 
-.sticky-cell > div {
-  margin: 0px 8px;
-  text-align: center;
-}
-
-.sticky-cell button {
+.mat-mdc-table-sticky button {
   cursor: pointer;
 }
 
