feat(edit-form): add party linking and synchronization to transaction edit forms
- Add party selection dropdown to all party reference fields (account holders, conductors, beneficiaries, etc.)
- Implement PartySyncDirective to synchronize party data between linkToSub and hidden fields
- Enable manual entry mode when no party is selected
- Add party validation with API lookup for unknown parties
- Generate party identifiers automatically when saving transactions with new parties
- Add PARTIES_DEV_OR_TEST_ONLY_FIXTURE for testing party functionality
- Update case record store to handle party generation queue (ADD_PARTIES edit type)
- Modify computeFullChangesHandler, computePartialChangesHandler, and computeAddedSelectionsHandler to enrich transactions with party data

--- a/user-reporting-app/src/app/reporting-ui/edit-form/edit-form.component.scss
+++ b/user-reporting-app/src/app/reporting-ui/edit-form/edit-form.component.scss
@@ -55,7 +55,7 @@ button[appToggleEditField] {
     display: unset;
   }
 
-  button[appClearField] {
+  button[appClearField].mat-mdc-button-disabled {
     display: none;
   }
 
