--- a/user-reporting-app/src/app/reporting-ui/edit-form/edit-form.component.scss
+++ b/user-reporting-app/src/app/reporting-ui/edit-form/edit-form.component.scss
@@ -36,6 +36,7 @@
 ::ng-deep .mat-mdc-form-field-icon-suffix {
   display: flex;
   gap: 0.2rem;
+  padding: 0 0.5rem !important;
 }
 
 button[appMarkAsCleared] {
