--- a/user-reporting-app/src/app/chatbot/chat-prompts/chat-prompts.component.scss
+++ b/user-reporting-app/src/app/chatbot/chat-prompts/chat-prompts.component.scss
@@ -1,28 +1,16 @@
+@use '@angular/material' as mat;
+
 :host {
   display: flex;
   flex-direction: column;
   gap: 8px;
   padding: 16px;
-  position: absolute;
-  bottom: 0px;
-  left: 0;
   align-items: flex-start;
+  position: sticky;
+  bottom: 0;
 }
 
 button {
-  text-align: left;
+  @include mat.button-density(-1);
   background: var(--mat-sys-surface);
-  border: 1px solid var(--mat-sys-outline-variant);
-  border-radius: var(--mat-sys-corner-small);
-  cursor: pointer;
-  padding: 0;
-  margin: 0;
-  font: inherit;
-  color: var(--mat-sys-on-surface);
-  flex-grow: 0;
-  width: auto;
-  display: inline-flex;
-  align-items: center;
-  gap: 8px;
-  padding: 8px 16px;
 }
