--- a/user-reporting-app/src/styles.scss
+++ b/user-reporting-app/src/styles.scss
@@ -195,7 +195,7 @@ html {
 }
 
 .upload-stepper-dialog {
-  --mat-dialog-container-max-width: 920px;
+  --mat-dialog-container-max-width: 70vw;
 }
 
 /* Ensure explicit height for ECharts */
